syntax = "proto3";

package ployz;

option go_package = "ployz/internal/daemon/pb";

service Daemon {
  rpc ApplyNetworkSpec(ApplyNetworkSpecRequest) returns (ApplyResult);
  rpc DisableNetwork(DisableNetworkRequest) returns (DisableNetworkResponse);
  rpc GetStatus(GetStatusRequest) returns (NetworkStatus);
  rpc GetIdentity(GetIdentityRequest) returns (Identity);
  rpc ListMachines(ListMachinesRequest) returns (ListMachinesResponse);
  rpc UpsertMachine(UpsertMachineRequest) returns (UpsertMachineResponse);
  rpc RemoveMachine(RemoveMachineRequest) returns (RemoveMachineResponse);
  rpc TriggerReconcile(TriggerReconcileRequest) returns (TriggerReconcileResponse);
  rpc GetPeerHealth(GetPeerHealthRequest) returns (GetPeerHealthResponse);
}

message NetworkSpec {
  string network = 1;
  string data_root = 2;
  string network_cidr = 3;
  string subnet = 4;
  string management_ip = 5;
  string advertise_endpoint = 6;
  int32 wg_port = 7;
  repeated string bootstrap = 8;
  string helper_image = 9;
  uint64 corrosion_member_id = 10;
  string corrosion_api_token = 11;
}

message ApplyNetworkSpecRequest {
  NetworkSpec spec = 1;
}

message ApplyResult {
  string network = 1;
  string network_cidr = 2;
  string subnet = 3;
  string management_ip = 4;
  string wg_interface = 5;
  int32 wg_port = 6;
  string advertise_endpoint = 7;
  string corrosion_name = 8;
  string corrosion_api_addr = 9;
  string corrosion_gossip_addr = 10;
  string docker_network = 11;
  bool convergence_running = 12;
}

message DisableNetworkRequest {
  string network = 1;
  bool purge = 2;
}

message DisableNetworkResponse {}

message GetStatusRequest {
  string network = 1;
}

message ClockHealth {
  double ntp_offset_ms = 1;
  bool ntp_healthy = 2;
  string ntp_error = 3;
}

message NetworkStatus {
  bool configured = 1;
  bool running = 2;
  bool wireguard = 3;
  bool corrosion = 4;
  bool docker = 5;
  string state_path = 6;
  bool worker_running = 7;
  ClockHealth clock_health = 8;
}

message GetIdentityRequest {
  string network = 1;
}

message Identity {
  string id = 1;
  string public_key = 2;
  string subnet = 3;
  string management_ip = 4;
  string advertise_endpoint = 5;
  string network_cidr = 6;
  string wg_interface = 7;
  int32 wg_port = 8;
  string helper_name = 9;
  int32 corrosion_gossip_port = 10;
  bool running = 11;
  uint64 corrosion_member_id = 12;
  string corrosion_api_token = 13;
}

message MachineEntry {
  string id = 1;
  string public_key = 2;
  string subnet = 3;
  string management_ip = 4;
  string endpoint = 5;
  string last_updated = 6;
  int64 version = 7;
  int64 expected_version = 8;
  double freshness_ms = 9;
  bool stale = 10;
  double replication_lag_ms = 11;
}

message ListMachinesRequest {
  string network = 1;
}

message ListMachinesResponse {
  repeated MachineEntry machines = 1;
}

message UpsertMachineRequest {
  string network = 1;
  MachineEntry machine = 2;
}

message UpsertMachineResponse {}

message RemoveMachineRequest {
  string network = 1;
  string id_or_endpoint = 2;
}

message RemoveMachineResponse {}

message TriggerReconcileRequest {
  string network = 1;
}

message TriggerReconcileResponse {}

message GetPeerHealthRequest {
  string network = 1;
}

message PeerLag {
  string node_id = 1;
  double freshness_ms = 2;
  bool stale = 3;
  double replication_lag_ms = 4;
  double ping_ms = 5;  // TCP connect RTT in ms, -1 = unreachable
}

// Metadata injected by the gRPC proxy into One2Many responses.
message Metadata {
  string machine_addr = 1;
  string error = 2;
  string machine_id = 3;
}

// Helper message for marshalling a single metadata field. Used by the proxy to
// inject metadata into response messages and to build error-only responses.
message Empty {
  Metadata metadata = 1;
}

// EmptyResponse wraps repeated Empty for One2Many error concatenation.
message EmptyResponse {
  repeated Empty messages = 1;
}

// PeerHealthReply is a single node's health report, compatible with One2Many proxy.
// The metadata field is injected by the proxy and is nil for direct (non-proxied) calls.
message PeerHealthReply {
  Metadata metadata = 1;
  string node_id = 2;
  ClockHealth ntp = 3;
  repeated PeerLag peers = 4;
}

message GetPeerHealthResponse {
  repeated PeerHealthReply messages = 1;
}
